--- a/Araç Kiralama Takibi/Araç Kiralama Takibi.csproj
+++ b/Araç Kiralama Takibi/Araç Kiralama Takibi.csproj
@@ -71,6 +71,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Anasayfa.aspx" />
+    <Content Include="AracYonetimi.aspx" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
     <Content Include="Content\bootstrap-reboot.css" />
@@ -149,9 +150,17 @@
     <Compile Include="Anasayfa.Master.designer.cs">
       <DependentUpon>Anasayfa.Master</DependentUpon>
     </Compile>
+    <Compile Include="AracYonetimi.aspx.cs">
+      <DependentUpon>AracYonetimi.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="AracYonetimi.aspx.designer.cs">
+      <DependentUpon>AracYonetimi.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Classes\Customer_Operations.cs" />
     <Compile Include="Classes\DbConnection.cs" />
     <Compile Include="Classes\User_Operations.cs" />
+    <Compile Include="Classes\Vehicle_Operations.cs" />
     <Compile Include="Giriş.aspx.cs">
       <DependentUpon>Giriş.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
