--- a/Araç Kiralama Takibi/Araç Kiralama Takibi.csproj
+++ b/Araç Kiralama Takibi/Araç Kiralama Takibi.csproj
@@ -71,6 +71,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Anasayfa.aspx" />
+    <Content Include="AracEkleGuncelle.aspx" />
     <Content Include="AracYonetimi.aspx" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
@@ -149,6 +150,13 @@
     </Compile>
     <Compile Include="Anasayfa.Master.designer.cs">
       <DependentUpon>Anasayfa.Master</DependentUpon>
+    </Compile>
+    <Compile Include="AracEkleGuncelle.aspx.cs">
+      <DependentUpon>AracEkleGuncelle.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="AracEkleGuncelle.aspx.designer.cs">
+      <DependentUpon>AracEkleGuncelle.aspx</DependentUpon>
     </Compile>
     <Compile Include="AracYonetimi.aspx.cs">
       <DependentUpon>AracYonetimi.aspx</DependentUpon>
